# fiap-pos-tech-ia-para-devs-tech-challenge-fase-3

./: .env  README.md  dataset_fine_tuning.json  guia_de_testes_biotech.md  main.py  pyproject.toml  tech_report_notes.md
knowledge/: protocolo_febrasgo_obstetricia.txt  protocolo_inca_mama.txt  protocolo_violencia_domestica.txt
notebook/: tech_challenge_fase3_assistente_saude copy.ipynb  tech_challenge_fase3_assistente_saude.ipynb  teste.ipynb
notebook/chroma_db_storage/: chroma.sqlite3
scripts/: generate_dataset.py
src/: clinical_engine.py
src/engine/: graph.py  nodes.py  state.py
src/rag/: core.py
